# ding-a-ling

./: .gitignore  README.md  pyproject.toml  run_tests.py
.beads/: issues.jsonl  metadata.json
.beads/backup/: backup_state.json  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl
.kiro/hooks/: code-quality-analyzer.kiro.hook  sync-docs-on-change.kiro.hook
.kiro/specs/ding-a-ling-thermal-transport/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
docs/: api.md
src/: __init__.py
src/core/: __init__.py  chain.py  collision.py  particle.py
src/ding_a_ling.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/simulation/: __init__.py  engine.py  flux.py  reservoir.py  steady_state.py
tests/: __init__.py  test_chain.py  test_collision.py  test_engine.py  test_flux.py  test_integration.py  test_particle.py  test_reservoir.py  test_steady_state.py  test_steady_state_convergence.py
